fix routing issue and adjust wording

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://peeblesbrandon.github.io/fcc-markdown-previewer/",
+  "homepage": "https://peeblesbrandon.github.io/fcc-markdown-previewer/",
   "name": "fcc-markdown-previewer",
   "version": "0.1.0",
   "private": true,
